syntax = "proto3";

package push;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message FirebaseCloudMessagingApp {
  string api_key = 1;
}

service AppService {
  rpc SetFirebaseCloudMessaging(FirebaseCloudMessagingApp) returns (google.protobuf.Empty) {}

  rpc GetFirebaseCloudMessaging(google.protobuf.Empty) returns (FirebaseCloudMessagingApp) {}
}

message Id {
  string id = 1;
}

message Topic {
  string name = 2;
}

message Subscription {
  Topic topic = 1;

  Id key = 2;
}

service SubscriptionService {
  rpc Subscribe(Subscription) returns (google.protobuf.Empty) {}

  rpc Unsubscribe(Subscription) returns (google.protobuf.Empty) {}

  rpc Get(Topic) returns (stream Id) {}
}

message FirebaseCloudMessagingEndpoint {
  string token = 1;
}

message SetFirebaseCloudMessagingEndpoint {
  Id key = 1;

  FirebaseCloudMessagingEndpoint value = 2;
}

message DeleteFirebaseCloudMessagingEndpoint {
  FirebaseCloudMessagingEndpoint value = 1;
}

message UpdateFirebaseCloudMessagingEndpoint {
  FirebaseCloudMessagingEndpoint old_value = 1;

  FirebaseCloudMessagingEndpoint new_value = 2;
}

service FirebaseCloudMessagingEndpointService {
  rpc Set(SetFirebaseCloudMessagingEndpoint) returns (google.protobuf.Empty) {}

  rpc Delete(DeleteFirebaseCloudMessagingEndpoint) returns (google.protobuf.Empty) {}

  rpc Update(UpdateFirebaseCloudMessagingEndpoint) returns (google.protobuf.Empty) {}

  rpc Get(Id) returns (stream FirebaseCloudMessagingEndpoint) {}
}

message FirebaseCloudMessagingNotification {
  string topic = 1;

  string condition = 2;

  repeated FirebaseCloudMessagingEndpoint endpoint = 3;

  message Payload {
    string json = 1;
  }

  Payload payload = 4;
}

service FirebaseCloudMessagingService {
  rpc Send(FirebaseCloudMessagingNotification) returns (google.protobuf.Empty) {}
}

message Log {
  google.protobuf.Timestamp timestamp = 1;

  string text = 2;
}

service LogService {
  rpc Info(Log) returns (google.protobuf.Empty) {}

  rpc Tail(google.protobuf.Empty) returns (stream Log) {}
}
